--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "jquery": "^3.6.1",
     "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
+    "toast-controller": "^0.11.6",
     "v-wave": "^1.5.0",
     "vue": "^3.2.38",
     "vue-material-design-ripple": "^1.0.0",
     "vue-router": "^4.1.5",
+    "vue-toasted": "^1.1.28",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
