--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "material-design-icons-iconfont": "^6.7.0",
     "roboto-fontface": "*",
     "toast-controller": "^0.11.6",
+    "toastify-js": "^1.12.0",
     "v-wave": "^1.5.0",
     "vue": "^3.2.38",
+    "vue-animated-list": "^1.0.2",
     "vue-material-design-ripple": "^1.0.0",
     "vue-router": "^4.1.5",
     "vue-toasted": "^1.1.28",
